--- a/packages/db-integrity-tracker/package.json
+++ b/packages/db-integrity-tracker/package.json
@@ -3,7 +3,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "ts-node src/index.ts --sqlfolder=./src/sql --trackfile=./db-tracker.txt",
-    "build": "tsc --project tsconfig.json"
+    "build": "esbuild src/index.ts --bundle --outfile=bin/index.js --platform=node"
   },
   "bin": {
     "db-integrity-tracker": "bin/index.js"
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.10",
     "@types/yargs": "^17.0.33",
+    "esbuild": "^0.24.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
