--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,14 +6,14 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: [self-hosted, linux, x64]
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: NPM Install
+      - name: npm install
         working-directory: ./apps/dev-collab-web
         run: npm i
-      - name: NPM Build
+      - name: npm Build
         working-directory: ./apps/dev-collab-web
         run: npm run build-only
         
