--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,11 @@ jobs:
       - name: npm Build
         working-directory: ./apps/dev-collab-web
         run: npm run build-only
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: web
+          path: ./apps/dev-collab-web/dist/
         
   deploy:
     name: Deploy
