--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,12 @@ jobs:
     name: Deploy
     runs-on: [self-hosted, linux, x64]
     steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: web
+      - name: Display structure of downloaded files
+        working-directory: ./apps/dev-collab-web
+        run: ls -R
       - name: Deploy with PM2
         working-directory: ./apps/dev-collab-web
         run: |
