--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,14 +32,13 @@ jobs:
         working-directory: ./apps/dev-collab-web
         run: ls -R
       - name: Deploy with PM2
-        working-directory: ./apps/dev-collab-web
         run: |
           # Stop existing process if it exists
           pm2 stop dev-collab-web || true
           pm2 delete dev-collab-web || true
           
           # Start new process
-          pm2 start npm --name "dev-collab-web" -- start
+          pm2 --name dev-collab-web serve --spa web 8080
           
           # Save PM2 configuration
           pm2 save
