--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -1,4 +1,4 @@
-name: web-build
+name: api-build
 on:
   push:
     branches:
@@ -11,17 +11,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: npm install
-        working-directory: ./apps/dev-collab-web
+        working-directory: ./apps/dev-collab-api
         run: npm i
-      - name: npm Build
-        working-directory: ./apps/dev-collab-web
-        run: npm run build-only
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
           name: web
-          path: ./apps/dev-collab-web/dist/
-        
+          path: ./apps/dev-collab-api/dist/
+
   deploy:
     needs: build
     name: Deploy
@@ -29,16 +26,15 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
       - name: Display structure of downloaded files
-        working-directory: ./apps/dev-collab-web
+        working-directory: ./apps/dev-collab-api
         run: ls -R
       - name: Deploy with PM2
         working-directory: .
         run: |
-          pm2 delete dev-collab-web || true
+          pm2 delete dev-collab-api || true
           
           # Start new process
-          pm2 --name dev-collab-web serve --spa web 8080
+          pm2 --name dev-collab-api serve --spa api 8080
           
           # Save PM2 configuration
           pm2 save
-          
