--- a/.github/workflows/ci-cd-web.yml
+++ b/.github/workflows/ci-cd-web.yml
@@ -25,7 +25,7 @@ jobs:
   deploy:
     needs: build
     name: Deploy
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [self-hosted, linux, x64, web-runner]
     steps:
       - uses: actions/download-artifact@v4
       - name: Deploy with PM2
