--- a/apps/dev-collab-api/Dockerfile
+++ b/apps/dev-collab-api/Dockerfile
@@ -2,10 +2,12 @@ ARG NODE_VERSION="20.17.0"
 
 FROM node:${NODE_VERSION}
 
+WORKDIR /app
+
 COPY  . .
 
 RUN ls -la
 
-RUN npm i
+RUN npm ci
 
 CMD ["npm", "run", "start:prod"]
