--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -28,12 +28,12 @@ jobs:
         with:
           context: ./apps/dev-collab-api
           file: ./apps/dev-collab-api/Dockerfile
-          tags: api:latest
+          tags: dev-collab-api:latest
           outputs: type=oci,dest=./apps/dev-collab-api/image.tar
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
-          name: api-docker
+          name: api
           path: ./apps/dev-collab-api/image.tar
 
   deploy:
@@ -57,3 +57,4 @@ jobs:
         run: |
           docker load -i image.tar
           docker image ls
+          docker run -p 80:8080 dev-collab-api
