--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -42,6 +42,8 @@ jobs:
     runs-on: [self-hosted, linux, x64, api-runner]
     steps:
       - uses: actions/download-artifact@v4
+        with:
+          name: api
       # - name: Deploy with PM2
       #   working-directory: .
       #   run: |
