--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -29,7 +29,7 @@ jobs:
           context: ./apps/dev-collab-api
           file: ./apps/dev-collab-api/Dockerfile
           tags: dev-collab-api:latest
-          outputs: type=oci,dest=./apps/dev-collab-api/image.tar
+          outputs: type=image,dest=./apps/dev-collab-api/image.tar
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
