--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: api
+          name: api-docker
       # - name: Deploy with PM2
       #   working-directory: .
       #   run: |
