--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -29,7 +29,7 @@ jobs:
           context: ./apps/dev-collab-api
           file: ./apps/dev-collab-api/Dockerfile
           tags: dev-collab-api:latest
-          outputs: type=oci,dest=./apps/dev-collab-api/image.tar
+          outputs: type=docker,dest=./apps/dev-collab-api/image.tar
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
@@ -57,6 +57,6 @@ jobs:
       - name: Deploy with Docker
         working-directory: ./api-docker
         run: |
-          docker load -i image.tar
-          docker image ls
-          docker run -p 80:8080 dev-collab-api
+          sudo docker load -i image.tar
+          sudo docker image ls
+          sudo docker run -p 80:8080 dev-collab-api
