--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -57,6 +57,6 @@ jobs:
       - name: Deploy with Docker
         working-directory: ./api-docker
         run: |
-          sudo docker load -i image.tar
-          sudo docker image ls
-          sudo docker run -p 80:8080 dev-collab-api
+          docker load -i image.tar
+          docker image ls
+          docker run -p 80:8080 dev-collab-api
