--- a/.github/workflows/ci-cd-web.yml
+++ b/.github/workflows/ci-cd-web.yml
@@ -4,38 +4,81 @@ on:
     branches:
       - "**"
 jobs:
-  build:
-    name: Build
+  # build:
+  #   name: Build
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+  #     - name: npm install
+  #       working-directory: ./apps/dev-collab-web
+  #       run: npm i
+  #     - name: npm Build
+  #       working-directory: ./apps/dev-collab-web
+  #       run: npm run build-only
+  #     - name: 'Upload Artifact'
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: web
+  #         path: ./apps/dev-collab-web/dist/
+  
+  dockerize:
+    # needs: build
+    name: Dockerize
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: npm install
-        working-directory: ./apps/dev-collab-web
-        run: npm i
-      - name: npm Build
-        working-directory: ./apps/dev-collab-web
-        run: npm run build-only
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      # -
+      #   name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./apps/dev-collab-web
+          file: ./apps/dev-collab-web/Dockerfile
+          tags: dev-collab-web:latest
+          outputs: type=docker,dest=./apps/dev-collab-web/image.tar
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v4
         with:
-          name: web
-          path: ./apps/dev-collab-web/dist/
-        
+          name: web-docker
+          path: ./apps/dev-collab-web/image.tar
+
   deploy:
-    needs: build
+    needs: dockerize
     name: Deploy
     runs-on: [self-hosted, linux, x64, web-runner]
     steps:
       - uses: actions/download-artifact@v4
-      - name: Deploy with PM2
-        working-directory: .
+        with:
+          name: web-docker
+      # - name: Deploy with PM2
+      #   working-directory: .
+      #   run: |
+      #     pm2 delete dev-collab-web || true
+          
+      #     # Start new process
+      #     pm2 --name dev-collab-web serve --spa web 3000
+          
+      #     # Save PM2 configuration
+      #     pm2 save
+      - name: Load image with Docker
+        working-directory: ./
         run: |
-          pm2 delete dev-collab-web || true
-          
-          # Start new process
-          pm2 --name dev-collab-web serve --spa web 3000
-          
-          # Save PM2 configuration
-          pm2 save
+          docker load -i image.tar
+          docker image ls
+      # - name: Run Docker compose
+      #   working-directory: ./
+      #   run: docker compose up -d
           
