--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -2,7 +2,8 @@ name: api-build
 on:
   push:
     branches:
-      - "**"
+      - develop
+      - master
 jobs:
   dockerize:
     name: Dockerize
