--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -5,7 +5,7 @@ on:
       - "**"
 jobs:
   build:
-    name: Build
+    name: security scanning
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
